Fixed OXUIB-156 Contact details are not visible in compact view
(cherry picked from commit 44582b7a53d2bda70c06e1fe2692c3f45e48659e)

--- a/ui/apps/io.ox/contacts/style.less
+++ b/ui/apps/io.ox/contacts/style.less
@@ -147,6 +147,15 @@
 
 .contact-detail-edit  { width: 100%; }
 
+// css react to listview resize. less padding for really small views
+.scrollable-pane.small-width .contact-detail {
+    .dl-horizontal {
+        @small-width: 120px;
+        dt { width: @small-width; }
+        dd { margin-left: @small-width + 32px; }
+    }
+}
+
 .contact-detail {
 
     width: 100%;
